--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@styled-icons/fa-brands": "^10.0.0",
+    "@styled-icons/fa-solid": "^10.0.0",
     "@styled-icons/material": "^10.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
