--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.3.6",
     "@styled-icons/fa-brands": "^10.0.0",
     "@styled-icons/fa-solid": "^10.0.0",
     "@styled-icons/material": "^10.0.0",
@@ -15,8 +16,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.7.2",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "styled-components": "^5.0.1"
   },
   "scripts": {
